LinKreta_POC_Repository/force-app/main/default/objects/datamask__DataMask_Configuration__mdt/fields/datamask__Aborting__c.field-meta.xml
<CustomField>
    <fullName>datamask__Aborting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aborting</label>
    <type>Checkbox</type>
</CustomField>