LinKreta_POC_Repository/force-app/main/default/objects/datamask__DataMask_Configuration__mdt/fields/datamask__Anonymize_Case_Comments__c.field-meta.xml
<CustomField>
    <fullName>datamask__Anonymize_Case_Comments__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Anonymize Case Comments</label>
    <type>Checkbox</type>
</CustomField>