LinKreta_POC_Repository/force-app/main/default/objects/datamask__DataMask_Configuration__mdt/fields/datamask__Last_Edit__c.field-meta.xml
<CustomField>
    <fullName>datamask__Last_Edit__c</fullName>
    <label>Last Edit</label>
    <type>DateTime</type>
</CustomField>