LinKreta_POC_Repository/force-app/main/default/objects/datamask__DataMask_Configuration__mdt/fields/datamask__Notes__c.field-meta.xml
<CustomField>
    <fullName>datamask__Notes__c</fullName>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>