LinKreta_POC_Repository/force-app/main/default/objects/datamask__DataMask_Configuration__mdt/fields/datamask__Status__c.field-meta.xml
<CustomField>
    <fullName>datamask__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inactive</fullName>
                <default>true</default>
                <label>Inactive</label>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Hidden</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>